# DiscoBall

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-ghcr.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  FUTURE_IMPROVEMENTS.md  INSTALL.md  SOP.md  TROUBLESHOOTING.md  WORKFLOW.md  ZIMAOS_MEDIA_PIPELINE.md
examples/: zimaos-media-pipeline.compose.yml
scripts/: install-zimaos-discoball.sh
src/discoball/: __init__.py  config.py  guess.py  main.py  models.py  naming.py  processor.py  state.py  ui.py  utils.py  watcher.py
src/discoball/providers/: __init__.py  imdb_dataset.py  omdb.py  registry.py
tests/: test_guess.py  test_naming.py
